Footer logo logo position corrections + spacing changed

--- a/assets/section-footer-logo.css
+++ b/assets/section-footer-logo.css
@@ -5,7 +5,7 @@
 .footer-logo__container{
     display: flex;
     flex-direction: row;
-    align-items: center;
+    justify-content: center;
 }
 
 .footer-logo__container img{
